demo/app-as-a-service/internal/promises/deployment/internal/request-pipeline/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: TBDNAME
  namespace: default
spec:
  selector:
    run: TBDNAME
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
