demo/app-as-a-service/internal/promises/deployment/internal/request-pipeline/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: TBDNAME-ingress-resource-backend
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: TBDNAME.local.gd
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: TBDNAME
            port:
              number: 8080
